--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64 
-        goos: [linux, darwin]
+        goos: [linux, windows, darwin]
         goarch: ["386", amd64]
         exclude:  
           - goarch: "386"
