--- a/.github/workflows/release-gui-windows.yml
+++ b/.github/workflows/release-gui-windows.yml
@@ -11,11 +11,8 @@ jobs:
     strategy:
       matrix:
         # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64
-        goos: [linux, windows, darwin]
+        goos: [windows]
         goarch: ["386", amd64]
-        exclude:
-          - goarch: "386"
-            goos: darwin
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.18
@@ -23,7 +20,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          pre_command: export CGO_ENABLED=0
           project_path: ./cmd/tap-over-https-gui
           binary_name: tap-over-https-gui
+          ldflags: -H=windowsgui
           extra_files: README.md
