--- a/.github/workflows/release-gui-linux.yml
+++ b/.github/workflows/release-gui-linux.yml
@@ -15,7 +15,7 @@ jobs:
         goarch: ["386", amd64]
     steps:
       - name: install gtk
-        run: sudo apt-get install gcc libgtk-3-dev libappindicator3-dev
+        run: sudo apt-get install pkg-config gcc libgtk-3-dev libappindicator3-dev
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.18
         with:
