--- a/.github/workflows/release-gui-linux.yml
+++ b/.github/workflows/release-gui-linux.yml
@@ -22,6 +22,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
+          pre_command: "export PATH=$PATH:/usr/bin"
           project_path: ./cmd/tap-over-https-gui
           binary_name: tap-over-https-gui
           extra_files: README.md
