fix linux build

--- a/.github/workflows/release-gui-linux.yml
+++ b/.github/workflows/release-gui-linux.yml
@@ -20,7 +20,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          pre_command: "apt-get install pkg-config gcc libgtk-3-dev libappindicator3-dev"
+          pre_command: "apt-get update && apt-get install --no-install-recommends -y pkg-config gcc libgtk-3-dev libappindicator3-dev && export CGO_ENABLED=1"
           project_path: ./cmd/tap-over-https-gui
           binary_name: tap-over-https-gui
           extra_files: README.md
