--- a/.github/workflows/release-gui-darwin.yml
+++ b/.github/workflows/release-gui-darwin.yml
@@ -39,6 +39,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: tap-over-https-gui-${GITHUB_REF}-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz
+          files: tap-over-https-gui-${{ github.ref }}-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
